# funjs

./: Cargo.toml  example.js  example.ts
src/: main.rs  runtime.js
