[package]
name = "funjs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_ast = { version= "0.29.5", features = ["transpiling"] }
deno_core = "0.222.0"
reqwest = "0.11.22"
tokio = { version = "1.33.0", features = ["full"] }
